# trinity-tbc-2020

./: .gitignore  CMakeLists.txt
cmake/: options.cmake  showoptions.cmake
src/: CMakeLists.txt
src/common/Asio/: IoContext.h  Resolver.h
src/server/game/: CMakeLists.txt  Channel.cpp  Channel.h  World.cpp
src/server/game/Entities/Player/: SocialMgr.cpp  SocialMgr.h
src/server/game/Groups/: Group.cpp
src/server/game/Handlers/: CharacterHandler.cpp
src/server/game/Server/: WorldSession.cpp  WorldSession.h
src/server/game/Server/Protocol/: Opcodes.cpp
src/server/game/VoiceChat/: VoiceChatChannel.cpp  VoiceChatChannel.h  VoiceChatDefines.h  VoiceChatHandler.cpp  VoiceChatMgr.cpp  VoiceChatMgr.h  VoiceChatServerSocket.cpp  VoiceChatServerSocket.h
src/server/shared/Networking/: AsyncConnector.h
src/server/shared/Realm/: RealmList.cpp  RealmList.h
src/server/worldserver/: Main.cpp  worldserver.conf.dist
